----------------------
* Rework navigation for feedback, completeness and consistency. Convert navigation from images to text. Convert to semantic markup. Address inconsistency of configxml.html. Patch by Joe Schmetzer
* More documentation enhancements contributed by Joe Schmetzer. For more details, see http://sourceforge.net/mailarchive/forum.php?thread_id=5363380&forum_id=2202
*  Expanded and clearer documentation for <cvs> contributed by Joe Schmetzer.

CruiseControl Release Notes - 2.1.6

AlwaysBuild
----------------------
* New SourceControl that always returns a modification. Submitted by Eric Pugh

AntBuilder
----------------------
* Added more infomative exception when log file doesn't contain a build tag. Patch by Dave Glowacki
* Added check to ensure that log file exists before trying to get contents.
* Fixed getCommandLineArgs to handle EmptyLabelIncrementer
* Added timeout attribute. Patch by Igor Fedorenko
* Added two XMLFilters to remove empty <message>- and <task>-elements from the XML log file in getAntLogAsElement.

BuildInfoTag
----------------------
* Added a tag to obtain summary and metric data about builds from the log
  files. This is used in the metris.jsp page.

ClearCase
----------------------
* use ISO-8859-1 enoding while parsing ClearCase outpout. Patch by Arent-Jan Banck

compile.xsl
----------------------
* Ignore empty lines. Patch by Brad Clarke (note: this is now obsolete for new logfiles but still useful for old ones)

Compound
----------------------
* New SourceControl implementation uses nested Trigger and Target sourcecontrols. The targets are only checked for changes if there is a change detected by a trigger. Submitted by Will Gwaltney

cruisecontrol.sh
----------------------
* Support relative sym links. Patch by Jerome Lacoste

CVS
----------------------
* Fixed a bug with not returning modfications when the tag attribute is used.

controlpanel.jsp
----------------------