@@ -268,6 +268,10 @@
         will handle checking for modifications, building, and publishing the
         results of your project.</p>
 
+        <p><i>Note</i>: even if one config.xml file can contain several 
+        <code>&lt;project&gt;</code> elements, you still need to run one 
+        build loop per unit of work.</p>
+
         <h3>Attributes</h3>
 
         <table class="documentation">
@@ -3110,13 +3114,13 @@
             <tr class="oddrow">
                 <td>recipient</td>
                 <td>Yes</td>
-                <td>Username of the recipient of the instant message. Reciepent username
+                <td>Username of the recipient of the instant message. Recipient username
                     is typically fully qualified: foo@bar.com</td>
             </tr>
             <tr>
                 <td>chatroom</td>
                 <td>No</td>
-                <td>Whether the recipient is a group versus an individual.</td>
+                <td>Whether the recipient is a group/chat (true) versus an individual (false). Defaults to false.</td>
             </tr>
             <tr class="oddrow">
                 <td>ssl</td>
